# tfg

./: .gitignore  README.md  exec_selected.txt  requirements.txt
.devcontainer/: devcontainer.json  install-dependencies.sh
packet_pincer/: Cargo.toml
packet_pincer/assets/: ground_truth_example.csv
packet_pincer/src/: flow_statistic.rs  ground_truth.rs  lib.rs  main.rs  packet_capture.rs  packet_flow.rs  packet_parse.rs
packet_pincer/src/stats/: activity.rs  byte_count.rs  flow_stat.rs  flow_statistics.rs  flow_times.rs  interarrival.rs  mod.rs  packet_count.rs  protocols.rs  running_stat.rs  tcp_flags.rs  transport.rs
paper/: paper.tex  refs.bib
report/: appendix_1_script_sources.tex  appendix_2_source_tool.tex  listings-rust.sty  refs.bib  tfg.tex
scripts/: analize_cicddos_2019.py  demo_model_run.py  evaluate_info_botiot_pcaps_tshark.py  evaluate_info_botiot_tshark.py  evaluate_info_cicddos_2019_pcaps_tshark.py  evaluate_info_toniot_pcaps_tshark.py  execute_packet_pincer_on_data.sh  extract_ground_truth_from_datasets.py  extract_info_botiot_csvs_fulldataset.py  extract_info_botiot_pcaps_tshark.sh  extract_info_cicddos_2019.py  extract_info_cicddos_2019_pcaps_tshark.sh  extract_info_cicddos_20_pcaps_tshark.sh  extract_info_toniot_csvs.py  extract_info_toniot_pcaps_tshark.sh  packet_pincer_preprocess_results.py  packet_pincer_preprocess_results_v1.py  packet_pincer_results_plots.py  packet_pincer_results_plots_list.py  packet_pincer_train_model_selected.py  packet_pincer_train_models.py  packet_pincer_train_models_pass.py  packet_pincer_train_models_v1.py  (+6 more)
(+35 files in other folders)
