[package]
name = "packet_pincer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
env_logger = "0.11.3"
etherparse = { git = "https://github.com/JulianSchmid/etherparse.git", rev = "7a9b992253230652e5d3822513a855743d6cb4c4" }
libc = "0.2.153"
log = "0.4.21"
pcap = "1.3.0"
priority-queue = "2.0.2"
serde = { version = "1.0.198", features = ["derive"] }
walkdir = "2.5.0"
